--- a/src/CommonBotLibrary/CommonBotLibrary.csproj
+++ b/src/CommonBotLibrary/CommonBotLibrary.csproj
@@ -10,6 +10,7 @@
       An asynchronous library of API wrappers designed to help with typical bot commands.
 
       Features:
+      -BotLibre Service: Converses with a Cleverbot-like chatbot.
       -Github Service: Posts issues to https://github.com.
       -Google Search Service: Searches https://google.com for webpages.
       -Google Vision Service: Uses Google Cloud Vision to analyze images.
